--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ img.hitbox {
   left: 0;
 }
 
-#content {
+#content-menu {
   background-color: rgba(255, 255, 255, 0.8);
   width: 70%;
   height: 70%;
@@ -130,6 +130,40 @@ img.hitbox {
   text-align: center;
   margin: auto auto;
   position: relative;
+}
+
+#settings {
+  width: 100%;
+  position: fixed;
+  top: 50px;
+  left: 0;
+}
+
+#content-settings {
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 40%;
+  height: 50%;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  margin: auto auto;
+  position: relative;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input {
+  display: block;
+  margin-left: 20px;
+  background: transparent;
+  border: 1px solid #000000;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  width: 50px;
 }
 
 #pause {
